# rick-bot

./: .breakpoints  README.md  README.rst  main.py  pyproject.toml
cogs/: fun.py  other.py
