[tool.poetry]
name = "repl_python3_rick"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.1"
"dislash.py" = "^1.4.9"
discord-buttons-plugin = "^0.1.2"
discord-buttons = "^0.5"
youtube_dl = "^2021.6.6"
PyNaCl = "^1.4.0"
wavelink = "^0.9.10"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
